--- a/ai_assistant/pubspec.yaml
+++ b/ai_assistant/pubspec.yaml
@@ -19,12 +19,29 @@ dev_dependencies:
 
   flutter_lints: ^3.0.0
 
+  #for changing app icon
+  #icons_launcher: ^2.1.7
+
+  #for using lottie animation
+  lottie: ^3.1.2
+
+  #for Hive database
+  hive: ^4.0.0-dev.2
+  isar_flutter_libs: ^4.0.0-dev.13
+  
+  #for accessing storage path
+  path_provider: ^2.1.0
+
+  #for state management
+  get: ^4.6.6
+
 flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
+    - assets/lottie/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
